# sdkwork-web-server

./: .env.postgres.example  .gitignore  AGENTS.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
crates/sdkwork-api-web-server-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-web-server-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-web-server-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-web-server-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-api-web-server-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-api-web-server-standalone-gateway/src/: bootstrap.rs  lib.rs  main.rs  provider_event_ingress.rs  website.rs  website_runtime_cloud.rs  website_runtime_recovery.rs
crates/sdkwork-api-web-server-standalone-gateway/tests/: data_plane_integration.rs  data_plane_metrics.rs  http1_connection_semantics.rs  proxy_protocol.rs  resource_pressure_admission.rs  trusted_proxy_real_ip.rs  upstream_active_health.rs  upstream_ip_hash.rs  upstream_least_connections.rs  upstream_physical_connections.rs  upstream_response_headers.rs  upstream_safe_retries.rs  upstream_weighted_selection.rs  websocket_proxy.rs
crates/sdkwork-intelligence-webserver-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-intelligence-webserver-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-intelligence-webserver-repository-sqlx/src/: agents.rs  audit.rs  certificates.rs  deployments.rs  domains.rs  domains_lookup.rs  env_variables.rs  health_checks.rs  lib.rs  nginx_configs.rs  port.rs  runtime.rs  runtime_assignments.rs  servers.rs  sites.rs  support.rs
crates/sdkwork-intelligence-webserver-repository-sqlx/tests/: repository_parity.rs
crates/sdkwork-intelligence-webserver-service/: Cargo.toml
crates/sdkwork-intelligence-webserver-service/specs/: README.md  component.spec.json
crates/sdkwork-intelligence-webserver-service/src/: agent_ops.rs  app.rs  backend.rs  certificate_ops.rs  certificate_renewal_ops.rs  lib.rs  nginx_ops.rs  repository.rs  runtime_assignment_ops.rs
crates/sdkwork-router-webserver-backend-api/: Cargo.toml
crates/sdkwork-router-webserver-backend-api/src/: agent_routes.rs  auth.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-webserver-app-api/: Cargo.toml
crates/sdkwork-routes-webserver-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-webserver-app-api/src/: auth.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-webserver-app-api/tests/: app_web_framework_routes.rs
crates/sdkwork-routes-webserver-backend-api/: Cargo.toml
crates/sdkwork-routes-webserver-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-webserver-backend-api/src/: agent_routes.rs  auth.rs  http_route_manifest.rs  lib.rs  paths.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-webserver-common/: Cargo.toml
crates/sdkwork-routes-webserver-common/specs/: README.md  component.spec.json
crates/sdkwork-routes-webserver-common/src/: correlation.rs  lib.rs  machine_credential.rs  problem.rs  response.rs
crates/sdkwork-routes-webserver-internal-api/: Cargo.toml
crates/sdkwork-routes-webserver-internal-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-webserver-internal-api/src/: auth.rs  http_route_manifest.rs  lib.rs  paths.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-webserver-internal-api/tests/: internal_routes.rs
crates/sdkwork-web-agent/: Cargo.toml  README.md
crates/sdkwork-web-agent/specs/: README.md  component.spec.json
crates/sdkwork-web-agent/src/: main.rs  state.rs
crates/sdkwork-web-server-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-web-server-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-web-server-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-web-server-website-delivery-edge-runtime/: Cargo.toml
crates/sdkwork-web-server-website-delivery-edge-runtime/specs/: README.md  component.spec.json
crates/sdkwork-web-server-website-delivery-edge-runtime/src/: main.rs  provider_event_relay.rs
crates/sdkwork-web-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-web-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-web-standalone-gateway/src/: bootstrap.rs  lib.rs  main.rs  metric_dimensions.rs
crates/sdkwork-web-standalone-gateway/tests/: data_plane_integration.rs  data_plane_metrics.rs  http1_connection_semantics.rs  proxy_protocol.rs  resource_pressure_admission.rs  trusted_proxy_real_ip.rs  upstream_active_health.rs  upstream_ip_hash.rs  upstream_least_connections.rs  upstream_physical_connections.rs  upstream_response_headers.rs  upstream_safe_retries.rs  upstream_weighted_selection.rs  websocket_proxy.rs
crates/sdkwork-webserver-acme-service/: Cargo.toml
crates/sdkwork-webserver-acme-service/specs/: README.md  component.spec.json
crates/sdkwork-webserver-acme-service/src/: challenge_store.rs  config.rs  encrypt.rs  error.rs  http_client.rs  issue.rs  lets_encrypt.rs  lib.rs  model.rs  self_signed.rs
crates/sdkwork-webserver-api-server/: Cargo.toml
crates/sdkwork-webserver-api-server/src/: bootstrap.rs  lib.rs  main.rs  readiness.rs
crates/sdkwork-webserver-certificate-worker/: Cargo.toml
crates/sdkwork-webserver-certificate-worker/specs/: README.md  component.spec.json
crates/sdkwork-webserver-certificate-worker/src/: main.rs
crates/sdkwork-webserver-contract/: Cargo.toml
crates/sdkwork-webserver-contract/specs/: README.md  (+1 more)
crates/sdkwork-webserver-core/: Cargo.toml  README.md
crates/sdkwork-webserver-database-host/: Cargo.toml  README.md
crates/sdkwork-webserver-delivery-runtime/: Cargo.toml
crates/sdkwork-webserver-drive-provider/: Cargo.toml
crates/sdkwork-webserver-edge-runtime/: Cargo.toml
crates/sdkwork-webserver-knowledgebase-provider/: Cargo.toml
(+395 files in other folders)
