[workspace]
resolver = "2"
members = [
  "crates/sdkwork-webserver-database-host",
  "crates/sdkwork-router-webserver-common",
  "crates/sdkwork-webserver-contract",
  "crates/sdkwork-webserver-core",
  "crates/sdkwork-webserver-acme-service",
  "crates/sdkwork-webserver-edge-runtime",
  "crates/sdkwork-web-agent",
  "crates/sdkwork-webserver-certificate-worker",
  "crates/sdkwork-intelligence-webserver-service",
  "crates/sdkwork-intelligence-webserver-repository-sqlx",
  "crates/sdkwork-router-webserver-app-api",
  "crates/sdkwork-router-webserver-backend-api",
  "crates/sdkwork-webserver-api-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
http = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
instant-acme = { version = "0.8", features = ["rcgen"] }
rcgen = "0.13"
x509-parser = "0.16"

sdkwork-webserver-acme-service = { path = "crates/sdkwork-webserver-acme-service" }
sdkwork-webserver-edge-runtime = { path = "crates/sdkwork-webserver-edge-runtime" }
sdkwork-web-agent = { path = "crates/sdkwork-web-agent" }
sdkwork-webserver-certificate-worker = { path = "crates/sdkwork-webserver-certificate-worker" }
sdkwork-webserver-contract = { path = "crates/sdkwork-webserver-contract" }
sdkwork-webserver-core = { path = "crates/sdkwork-webserver-core" }
sdkwork-webserver-database-host = { path = "crates/sdkwork-webserver-database-host" }
sdkwork-intelligence-webserver-service = { path = "crates/sdkwork-intelligence-webserver-service" }
sdkwork-intelligence-webserver-repository-sqlx = { path = "crates/sdkwork-intelligence-webserver-repository-sqlx" }
sdkwork-router-webserver-app-api = { path = "crates/sdkwork-router-webserver-app-api" }
sdkwork-router-webserver-backend-api = { path = "crates/sdkwork-router-webserver-backend-api" }
sdkwork-router-webserver-common = { path = "crates/sdkwork-router-webserver-common" }
sdkwork-webserver-api-server = { path = "crates/sdkwork-webserver-api-server" }

sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-id-core = { path = "../sdkwork-id/crates/sdkwork-id-core" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
