[workspace]
resolver = "2"
members = [
  "crates/sdkwork-api-web-server-assembly",
  "crates/sdkwork-webserver-database-host",
  "crates/sdkwork-routes-webserver-common",
  "crates/sdkwork-webserver-contract",
  "crates/sdkwork-webserver-core",
  "crates/sdkwork-webserver-acme-service",
  "crates/sdkwork-webserver-edge-runtime",
  "crates/sdkwork-web-agent",
  "crates/sdkwork-webserver-certificate-worker",
  "crates/sdkwork-intelligence-webserver-service",
  "crates/sdkwork-intelligence-webserver-repository-sqlx",
  "crates/sdkwork-routes-webserver-app-api",
  "crates/sdkwork-routes-webserver-backend-api",
  "crates/sdkwork-api-web-server-standalone-gateway",
]
exclude = [
  "sdks/sdkwork-web-backend-sdk/sdkwork-web-backend-sdk-rust/generated/server-openapi",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
async-trait = "0.1"
atomic-waker = "1"
arc-swap = "1"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
bytes = "1"
crc = "3"
dotenvy = "0.15"
http = "1.4"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "server-auto", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs", "http1", "http2", "tls12", "webpki-roots"] }
ipnet = { version = "2", features = ["serde"] }
futures-util = "0.3"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
url = "2"
webpki-roots = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
jsonschema = { version = "0.47", default-features = false }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
base64 = "0.22"
hex = "0.4"
h2 = "0.4"
sha2 = "0.10"
sync_wrapper = "1"
aes-gcm = "0.10"
instant-acme = { version = "0.8", features = ["rcgen"] }
rcgen = "0.13"
x509-parser = "0.16"
time = "0.3"
tokio-rustls = "0.26"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

sdkwork-webserver-acme-service = { path = "crates/sdkwork-webserver-acme-service" }
sdkwork-webserver-edge-runtime = { path = "crates/sdkwork-webserver-edge-runtime" }
sdkwork-web-agent = { path = "crates/sdkwork-web-agent" }
sdkwork-webserver-certificate-worker = { path = "crates/sdkwork-webserver-certificate-worker" }
sdkwork-webserver-contract = { path = "crates/sdkwork-webserver-contract" }
sdkwork-webserver-core = { path = "crates/sdkwork-webserver-core" }
sdkwork-webserver-database-host = { path = "crates/sdkwork-webserver-database-host" }
sdkwork-intelligence-webserver-service = { path = "crates/sdkwork-intelligence-webserver-service" }
sdkwork-intelligence-webserver-repository-sqlx = { path = "crates/sdkwork-intelligence-webserver-repository-sqlx" }
sdkwork-routes-webserver-app-api = { path = "crates/sdkwork-routes-webserver-app-api" }
sdkwork-routes-webserver-backend-api = { path = "crates/sdkwork-routes-webserver-backend-api" }
sdkwork-routes-webserver-common = { path = "crates/sdkwork-routes-webserver-common" }
sdkwork-api-web-server-assembly = { path = "crates/sdkwork-api-web-server-assembly" }
sdkwork-api-web-server-standalone-gateway = { path = "crates/sdkwork-api-web-server-standalone-gateway" }
sdkwork-web-backend-sdk = { path = "sdks/sdkwork-web-backend-sdk/sdkwork-web-backend-sdk-rust/generated/server-openapi" }

sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-drift = { path = "../sdkwork-database/crates/sdkwork-database-drift", package = "sdkwork-database-drift" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-database-id = { path = "../sdkwork-database/crates/sdkwork-database-id", package = "sdkwork-database-id" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
