[package]
name = "sdkwork-api-web-server-standalone-gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_api_web_server_standalone_gateway"
path = "src/lib.rs"


[[bin]]
name = "sdkwork-api-web-server-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork-api-web-server-assembly.workspace = true
atomic-waker.workspace = true
arc-swap.workspace = true
axum.workspace = true
axum-server.workspace = true
bytes.workspace = true
crc.workspace = true
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
ipnet.workspace = true
percent-encoding.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde_json.workspace = true
socket2.workspace = true
sha2.workspace = true
sync_wrapper.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
webpki-roots.workspace = true
x509-parser.workspace = true
windows-sys.workspace = true
sdkwork-intelligence-webserver-service.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-webserver-database-host.workspace = true
sdkwork-webserver-core.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true

[dev-dependencies]
h2.workspace = true
http-body-util = { workspace = true, features = ["channel"] }
rcgen.workspace = true
reqwest.workspace = true
tempfile.workspace = true
