[package]
name = "sdkwork-intelligence-webserver-repository-sqlx"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true

sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-webserver-database-host.workspace = true
sdkwork-database-id.workspace = true
sdkwork-intelligence-webserver-service.workspace = true
sdkwork-webserver-acme-service.workspace = true
sdkwork-webserver-edge-runtime.workspace = true
sdkwork-utils-rust.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
