[package]
name = "sdkwork-router-webserver-backend-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-intelligence-webserver-service.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-router-webserver-common.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
