[package]
name = "sdkwork-routes-webserver-app-api"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-routes-webserver-common.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
sdkwork-iam-web-adapter.workspace = true
tower.workspace = true
