[package]
name = "sdkwork-routes-webserver-backend-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-intelligence-webserver-service.workspace = true
sdkwork-routes-webserver-common.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
sdkwork-utils-rust.workspace = true
