[package]
name = "sdkwork-routes-webserver-common"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
tokio.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
tracing.workspace = true
