[package]
name = "sdkwork-routes-webserver-internal-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork-routes-webserver-common.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
sdkwork-webserver-contract.workspace = true

[dev-dependencies]
async-trait.workspace = true
http-body-util.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
