[package]
name = "sdkwork-web-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-web-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1"

sdkwork-webserver-edge-runtime.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-webserver-acme-service.workspace = true
