[package]
name = "sdkwork-web-server-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-web-server application HTTP plane."

[lib]
name = "sdkwork_web_server_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-intelligence-webserver-repository-sqlx.workspace = true
sdkwork-routes-webserver-app-api.workspace = true
sdkwork-routes-webserver-backend-api.workspace = true
