[package]
name = "sdkwork-web-server-website-delivery-edge-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
sdkwork-api-web-server-standalone-gateway.workspace = true
sdkwork-webserver-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
