[package]
name = "sdkwork-web-standalone-gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_web_standalone_gateway"
path = "src/lib.rs"


[[bin]]
name = "sdkwork-web-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sdkwork-routes-webserver-app-api.workspace = true
sdkwork-routes-webserver-backend-api.workspace = true
sdkwork-routes-webserver-common.workspace = true
sdkwork-intelligence-webserver-repository-sqlx.workspace = true
sdkwork-intelligence-webserver-service.workspace = true
sdkwork-webserver-database-host.workspace = true
sdkwork-web-bootstrap.workspace = true

