[package]
name = "sdkwork-web-standalone-gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_web_standalone_gateway"
path = "src/lib.rs"


[[bin]]
name = "sdkwork-web-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
axum-server.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sdkwork-routes-webserver-app-api.workspace = true
sdkwork-routes-webserver-backend-api.workspace = true
sdkwork-routes-webserver-common.workspace = true
sdkwork-intelligence-webserver-repository-sqlx.workspace = true
sdkwork-intelligence-webserver-service.workspace = true
sdkwork-webserver-database-host.workspace = true
sdkwork-webserver-core.workspace = true
sdkwork-web-bootstrap.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true
