[package]
name = "sdkwork-webserver-acme-service"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
instant-acme.workspace = true
chrono.workspace = true
rcgen.workspace = true
rand = "0.8"
sdkwork-utils-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
x509-parser.workspace = true

[dev-dependencies]
tempfile = "3"
