[package]
name = "sdkwork-webserver-acme-service"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
hex.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
instant-acme.workspace = true
chrono.workspace = true
rcgen.workspace = true
rand = "0.8"
sdkwork-utils-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
x509-parser.workspace = true

[dev-dependencies]
