[package]
name = "sdkwork-webserver-contract"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-webserver-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
