[package]
name = "sdkwork-webserver-core"
version.workspace = true
edition.workspace = true

[dependencies]
arc-swap.workspace = true
sdkwork-utils-rust.workspace = true
ipnet.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
