[package]
name = "sdkwork-webserver-drive-provider"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
sdkwork-drive-internal-sdk.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-webserver-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
