[package]
name = "sdkwork-webserver-edge-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

sdkwork-webserver-acme-service.workspace = true

[dev-dependencies]
tempfile = "3"
