[package]
name = "sdkwork-webserver-edge-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
tracing.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

sdkwork-utils-rust.workspace = true
sdkwork-webserver-acme-service.workspace = true

[dev-dependencies]
rcgen.workspace = true
