[package]
name = "sdkwork-webserver-knowledgebase-provider"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["time"] }
sdkwork-knowledgebase-internal-sdk.workspace = true
sdkwork-webserver-contract.workspace = true
sdkwork-webserver-core.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
